GSTPE:51 refactoring mapper
