# modules/amf-registration/amf-registration-rest/amf-registration-rest-impl/rest-openapi.yaml
@@ -1,6 +1,6 @@
 components:
   schemas:
-    Account:
+    AccountDTO:
       description: A sample api of Acme Movie Fanatics (AMF).
       properties:
         firstName:
@@ -90,14 +90,14 @@ paths:
             application/json:
               schema:
                 items:
-                  $ref: "#/components/schemas/Account"
+                  $ref: "#/components/schemas/AccountDTO"
                 type: array
             application/xml:
               schema:
                 items:
-                  $ref: "#/components/schemas/Account"
+                  $ref: "#/components/schemas/AccountDTO"
                 type: array
-          description: "Successfully returned datas of account"
+          description: "Successfully returned datas of accountDTO"
         400:
           description: Invalid request
           content:
@@ -120,20 +120,20 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Account"
+              $ref: "#/components/schemas/AccountDTO"
           application/xml:
             schema:
-              $ref: "#/components/schemas/Account"
+              $ref: "#/components/schemas/AccountDTO"
       responses:
         201:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Account"
+                $ref: "#/components/schemas/AccountDTO"
             application/xml:
               schema:
-                $ref: "#/components/schemas/Account"
-          description: "Successfully created account"
+                $ref: "#/components/schemas/AccountDTO"
+          description: "Successfully created accountDTO"
       tags: [ "Account" ]
   "/account/{accountId}":
     get:
@@ -149,10 +149,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Account"
+                $ref: "#/components/schemas/AccountDTO"
             application/xml:
               schema:
-                $ref: "#/components/schemas/Account"
+                $ref: "#/components/schemas/AccountDTO"
           description: "Successfully returned datas of account"
       tags: ["Account"]
     delete:
@@ -182,18 +182,18 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Account"
+              $ref: "#/components/schemas/AccountDTO"
           application/xml:
             schema:
-              $ref: "#/components/schemas/Account"
+              $ref: "#/components/schemas/AccountDTO"
       responses:
         200:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Account"
+                $ref: "#/components/schemas/AccountDTO"
             application/xml:
               schema:
-                $ref: "#/components/schemas/Account"
+                $ref: "#/components/schemas/AccountDTO"
           description: "Successfully returned datas of account"
       tags: [ "Account" ]
